--- a/dashboard/gussan/line.html
+++ b/dashboard/gussan/line.html
@@ -6,7 +6,7 @@
 </head>
 <body style = "font-family : UD デジタル 教科書体 NK-R;">
 
-  <h1 style = "text-align: center;">年間の売上割合</h1>
+  <h1 style = "text-align: center;">年間別の売上</h1>
 
   <canvas id = "myDoughnutChart" style = "position: relative; height : 110px; width: 300px;" ></canvas>
 
